[gd_scene load_steps=2 format=3 uid="uid://dnyg04rfc4ewp"]

[ext_resource type="Script" uid="uid://cy4qa4se2su27" path="res://Scripts/main_menu.gd" id="1_06t4h"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -148.75
offset_top = -401.0
offset_right = 148.75
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 207.0
offset_right = 1042.0
offset_bottom = 477.0
theme_override_font_sizes/normal_font_size = 27
text = "You are falling down a pit.
Eat the food to gain weight!
Be warned: Fatter = slower acceleration
Avoid hitting/walls obstacles to not lose weight!
Bar on the right shows the distance to the next barrier; make sure you're fat enough to break through!"
fit_content = true
autowrap_mode = 2
horizontal_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = 444.0
offset_right = 1158.0
offset_bottom = 714.0
theme_override_font_sizes/normal_font_size = 62
text = "Press ESC to return to main menu!!"
fit_content = true
autowrap_mode = 2
horizontal_alignment = 1

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 44.0
offset_right = 945.0
offset_bottom = 202.0
theme_override_font_sizes/normal_font_size = 116
text = "FAT SAMUEL"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Container" type="Container" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Container"]
visible = false
layout_mode = 2
color = Color(1, 1, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Container"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
text = "THIS IS TUTORIAL"
fit_content = true
autowrap_mode = 2
horizontal_alignment = 1

[node name="Start" type="Button" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Start Game"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = 207.0
offset_right = 283.0
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Start Game"

[node name="Tutorial" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Tutorial"

[node name="Gummies" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Gummies
"

[node name="Extras" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Extras"

[connection signal="pressed" from="HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="HBoxContainer/Gummies" to="." method="_on_gummies_pressed"]
[connection signal="pressed" from="HBoxContainer/Extras" to="." method="_on_extras_pressed"]
